# blosc-rs

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: ci.yml
blosc/: Cargo.toml  README.md  release.toml
blosc-src/: Cargo.toml  bindgen.sh  build.rs
blosc-src/src/: bindgen.rs  lib.rs
blosc-sys/: Cargo.toml  README.md  bindgen.sh  build.rs  release.toml
blosc-sys/src/: bindgen.rs  lib.rs
blosc/src/: lib.rs
blosc/tests/: test.rs
