[package]
name = "blosc-src"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2018"
build = "build.rs"
links = "bloscsrc"
license-file = "c-blosc/LICENSES/BLOSC.txt"
exclude = [
    "c-blosc/compat/**",
    "c-blosc/tests/**",
    "c-blosc/bench/**",
]

[dependencies]

[build-dependencies]
cmake = "0.1.44"
