[package]
name = "blosc-sys"
version = "1.14.5-pre"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/asomers/blosc-rs"
description = """
Rust FFI bindings to the C-BLOSC compression library
"""
documentation = "https://docs.rs/blosc-sys"
categories = ["external-ffi-bindings"]
keywords = ["compression"]
links = "blosc"

[build-dependencies]
bindgen = "0.54.1"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3.18"
