[package]
name = "blosc-sys"
version = "1.14.5-pre"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/asomers/blosc-rs"
description = """
Rust FFI bindings to the C-BLOSC compression library
"""
documentation = "https://docs.rs/blosc-sys"
categories = ["external-ffi-bindings"]
keywords = ["compression"]
links = "blosc"
exclude = [
  "bindgen.sh",
  "release.toml"
]
