[package]
name = "blosc-sys"
version = "1.21.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/asomers/blosc-rs"
description = """
Rust FFI bindings to the C-BLOSC compression library
"""
documentation = "https://docs.rs/blosc-sys"
categories = ["external-ffi-bindings"]
keywords = ["compression"]
links = "blosc"
exclude = [
  "bindgen.sh",
  "release.toml"
]
