[package]
name = "blosc"
version = "0.1.4-pre"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/asomers/blosc-rs"
description = """
Rust bindings to the C-BLOSC compression library
"""
documentation = "https://docs.rs/blosc"
categories = ["api-bindings"]
keywords = ["compression"]

[dependencies]
blosc-sys = { version = "1.14.5-pre", path = "../blosc-sys" }
libc = "0.2.4"

[dev-dependencies]
bincode = "1.0"
rand = "0.7.0"
galvanic-test = "0.1.3"
serde = "1.0"
