[package]
name = "blosc"
version = "0.1.4-pre"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/asomers/blosc-rs"
description = """
Rust bindings to the C-BLOSC compression library
"""
documentation = "https://docs.rs/blosc"
categories = ["api-bindings"]
keywords = ["compression"]
exclude = [
  "release.toml",
  "tests/**/*.rs"
]

[dependencies]
blosc-sys = { version = "1.21.0", path = "../blosc-sys" }
libc = "0.2.4"

[dev-dependencies]
bincode = "1.0"
rand = "0.7.0"
rstest = "0.17.0"
serde = "1.0"
